# hiresTI

./: .gitignore  CHANGELOG.md  CODE_STRUCTURE.md  README.md  README_ARCH.md  README_CN.md  app_logging.py  audio-optimization-guide.md  hiresti  main.py  models.py  openclaw-mcp-guide-en.md  package.sh  requirements.txt  test_packages.sh  test_remote_control_api.sh  test_ui.sh  utils.py
app/: __init__.py  executor.py
flatpak/: README.md  com.hiresti.player.desktop  com.hiresti.player.metainfo.xml  com.hiresti.player.yml  python3-requirements.json  requirements-flatpak.txt
rust_audio_core/: Cargo.toml
src/: main.py  models.py  rust_audio_engine.py  tidal_backend.py  utils.py
src_rust/rust_audio_core/: Cargo.toml  build.rs
src_rust/rust_audio_core/.cargo/: config.toml
src_rust/rust_audio_core/src/: alsa_clock.rs  lib.rs
src_rust/rust_audio_core/src/dsp/: convolver.rs  limiter.rs  lufs.rs  lv2.rs  mod.rs  peq.rs  resampler.rs  tape.rs  tube.rs  widener.rs
src_rust/rust_audio_core/src/usb_audio/: control.rs  descriptor.rs  device.rs  dop.rs  feedback.rs  mod.rs  queue.rs  sink.rs  transfer.rs
tests/: test_album_artist_navigation.py  test_album_card_metadata.py  test_app_auth_qr.py  test_app_bootstrap_icon_theme.py  test_app_builders_shortcuts.py  test_app_favorites.py  test_app_handlers_login_view.py  test_app_init_runtime.py  test_app_remote_control_queue_ops.py  test_app_settings.py  test_app_startup_smoke.py  test_app_tray_share.py  test_app_visualizer_dsp_toggle.py  test_app_wiring_bind_map.py  test_app_wiring_idempotent.py  test_app_wiring_smoke.py  (+45 more)
(+96 files in other folders)
