[package]
name = "rust_audio_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_audio_core"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[build-dependencies]
pkg-config = "0.3"

[dependencies]
gstreamer = "0.23"
glib = "0.20"
pipewire = "0.8"
libpulse-binding = "2"
libc = "0.2"
rustfft = "6"
