[package]
name = "rust_audio_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_audio_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "usb_enum"
path = "src/bin/usb_enum.rs"
required-features = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[build-dependencies]
pkg-config = "0.3"

[dependencies]
gstreamer = "0.23"
glib = "0.20"
pipewire = "0.9"
libpulse-binding = "2"
libc = "0.2"
rustfft = "6"
rusb = "0.9"
libusb1-sys = "0.7"
